Edit html files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Hello-microverse</title>
 </head>
 <body>
-   <h1 class="heading">Hello Microverse!</h1> 
+   <h1 class="heading">Hello Microverse!!</h1> 
 </body>
 </html>
